# rk_image_processor

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  hw_shim.c  hw_shim.h
aarch64_sysroot/lib/: librga.so.2.1.0
cmake/: aarch64-linux-gnu.cmake
refer/hailo_rs/: Cargo.toml  build.rs  hw_shim.c  wrapper.h
refer/hailo_rs/aarch64_sysroot/lib/: librockchip_mpp.so.0
refer/hailo_rs/src/: decoder.rs  main.rs
refer/hailo_rs/src/app/: config.rs  image.rs  mod.rs  options.rs  routes.rs  runtime.rs  state.rs  trigger_engine.rs  types.rs
refer/hailo_rs/src/hailo_ffi/: mod.rs
refer/hailo_rs/src/hw/: device.rs  mod.rs  mpp_jpeg.rs  rga.rs  vdevice.rs
refer/hailo_rs/src/infer/: hef.rs  mod.rs  network.rs  postprocess.rs  vstream.rs
src/: main.cpp
src/hw/: mpp_jpeg.cpp  mpp_jpeg.hpp  rga.cpp  rga.hpp
