[package]
name = "hyper_mix"
version = "0.1.2"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
axum = "0.8.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
opencv = { version = "0.98.2", features = [
    "clang-runtime",
    "videoio",
    "imgproc",
    "imgcodecs",
    # "highgui",
], default-features = false }
tokio = { version = "1.51.1", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "sync",
] }
tower-http = { version = "0.6.6", features = ["fs"] }
v4l = "0.14"
libc = "0.2"
mbus = { path = "../mbus" }
kmmacro = { path = "../kmmacro" }
regex = { version = "1", default-features = false, features = ["std"] }

[dev-dependencies]
bindgen = "0.72.1"

[build-dependencies]
bindgen = "0.72.1"
cc = "1"

[profile.release]
opt-level = "z"   # 針對程式碼大小進行優化 ("s" 也是選項)
lto = true        # 開啟連結期優化 (Link Time Optimization)，能大幅剔除未使用的程式碼
codegen-units = 1 # 降低編譯速度，但能讓優化器做得更好
panic = "abort"   # 發生 panic 時直接中止，不產生龐大的 unwinding 堆疊資訊
strip = true      # 移除除錯符號
